<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">


    <Button
        android:id="@+id/quizBtn"
        android:layout_width="122dp"
        android:layout_height="88dp"
        android:layout_marginTop="292dp"
        android:layout_marginBottom="21dp"
        android:text="Quiz"
        android:background="@drawable/fancy_button"
        app:layout_constraintBottom_toTopOf="@+id/answersBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/answersBtn"
        android:layout_width="122dp"
        android:layout_height="91dp"
        android:layout_marginBottom="16dp"
        android:text="Answers"
        android:background="@drawable/fancy_button"
        app:layout_constraintBottom_toTopOf="@+id/addEntryBtn"
        app:layout_constraintEnd_toEndOf="@+id/addEntryBtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/addEntryBtn"
        app:layout_constraintTop_toBottomOf="@+id/quizBtn" />

    <Button
        android:id="@+id/addEntryBtn"
        android:layout_width="121dp"
        android:layout_height="97dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="281dp"
        android:text="Add Entry"
        android:background="@drawable/fancy_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/quizBtn"
        app:layout_constraintTop_toBottomOf="@+id/answersBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>